--- a/style.css
+++ b/style.css
@@ -757,9 +757,6 @@ h4 {
     width: 100%;
     height: 20rem;
     object-fit: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .portfolio-row {
@@ -841,7 +838,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
@@ -999,6 +996,7 @@ h4 {
         overflow-x: hidden;
         -webkit-box-shadow: none;
         box-shadow: none;
+
     }
 
     .navbar-brand img {
