--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a:hover {
 }
 
 .bloc-sm {
-    padding: 20px 50px;
+    padding: 20px 50px 0px 20px;
 }
 
 .bg-center,
@@ -323,15 +323,17 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
     float: right;
     z-index: 1;
+    margin-top: 2.5rem;
+
 }
 
 .nav>li {
-    float: left;
+    display: flex;
+    justify-content: center;
     margin-top: 4px;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .navbar-nav .open .dropdown-menu>li>a {
@@ -405,11 +407,13 @@ a:hover {
         right: 0;
         margin-right: 0px;
         margin-top: 20px;
+
     }
 
     .nav-center.mini-nav .navbar-toggle {
         float: none;
         margin: 10px auto 0;
+
     }
 }
 
@@ -687,7 +691,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 15px;
 }
 
 .tight-width-whitespace {
@@ -715,12 +719,12 @@ p {
 }
 
 h2 {
-    font-size: 22px;
-    line-height: 1.4em;
+    font-size: 24px;
+    line-height: 1.5em;
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 19px;
     text-transform: uppercase;
     font-weight: 700;
     color: #333333 !important;
@@ -769,8 +773,9 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(0, 0, 0, 0.829);
     padding: 40px 40px 40px 40px;
+    border-radius: 5px;
 }
 
 .bold-link {
@@ -791,12 +796,13 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C !important;
+    color: #f2f2f2 !important;
 }
+
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF !important;
+    color: #000000 !important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -1029,6 +1035,7 @@ h4 {
     .bloc-md {
         padding-left: 0;
         padding-right: 0;
+        padding-bottom: 20px;
     }
 
     .bloc-tile-2 .container,
@@ -1092,4 +1099,20 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+
+
+/*Ajout supplémentaire de classe*/
+/*Correction lié au SEO*/
+
+.imgDescription {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 85%;
+    margin-right: auto;
+    margin-left: auto;
+    font-weight: 550;
+    padding-bottom: 5px;
+    font-size: 18px;
 }
