--- a/style.css
+++ b/style.css
@@ -7,31 +7,15 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-/*Crée spécialement pour l'optimisation SEO*/
-
-.flexBetween {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-.maxSize75 {
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-/*Fin de rajout pour l'optimisation SEO*/
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none !important;
+    outline: none!important;
 }
 
 a:hover {
     text-decoration: none;
+    cursor: pointer;
 }
 
 #page-loading-blocs-notifaction {
@@ -69,7 +53,7 @@ a:hover {
 }
 
 .bloc-sm {
-    padding: 20px 50px 0px 20px;
+    padding: 20px 50px;
 }
 
 .bg-center,
@@ -82,10 +66,10 @@ a:hover {
 .bg-tr-edge,
 .bg-br-edge,
 .bg-repeat {
-    -webkit-background-size: auto !important;
-    -moz-background-size: auto !important;
-    -o-background-size: auto !important;
-    background-size: auto !important;
+    -webkit-background-size: auto!important;
+    -moz-background-size: auto!important;
+    -o-background-size: auto!important;
+    background-size: auto!important;
 }
 
 .bg-repeat {
@@ -97,6 +81,7 @@ a:hover {
 }
 
 .bloc-bg-texture::before {
+    content: "";
     background-size: 2px 2px;
     position: absolute;
     top: 0;
@@ -148,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: black;
+    color: rgba(255, 255, 255, .6);
 }
 
 .d-bloc .a-btn:hover,
@@ -165,7 +150,7 @@ a:hover {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-    color: black;
+    color: rgba(255, 255, 255, 1);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -290,12 +275,10 @@ a:hover {
 .row-no-gutters {
     margin-right: 0;
     margin-left: 0;
-    display: flex;
-    flex-direction: column;
 }
 
-.row.row-no-gutters>[class^="col-"],
-.row.row-no-gutters>[class*=" col-"] {
+.row.row-no-gutters > [class^="col-"],
+.row.row-no-gutters > [class*=" col-"] {
     padding-right: 0;
     padding-left: 0;
 }
@@ -334,30 +317,23 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
+    margin-right: -16px;
     float: right;
     z-index: 1;
-    margin-top: 2.5rem;
-
 }
 
-.nav>li {
-    display: flex;
-    justify-content: center;
+.nav > li {
+    float: left;
     margin-top: 4px;
-    font-size: 20px;
-    transition: all 500ms;
+    font-size: 16px;
 }
 
-.nav>li:hover {
-    transform: scale(1.2);
-}
-
-.navbar-nav .open .dropdown-menu>li>a {
+.navbar-nav .open .dropdown-menu > li > a {
     text-align: inherit;
 }
 
-.nav>li a:hover,
-.nav>li a:focus {
+.nav > li a:hover,
+.nav > li a:focus {
     background: transparent;
 }
 
@@ -367,7 +343,7 @@ a:hover {
 }
 
 .navbar-toggle:hover {
-    background: transparent !important;
+    background: transparent!important;
 }
 
 .navbar-toggle .icon-bar {
@@ -388,53 +364,47 @@ a:hover {
 
 @media (min-width: 768px) {
     .site-navigation {
+        position: absolute;
+        top: 50%;
+        right: 20px;
         transform: translate(0, -50%);
         -webkit-transform: translateY(-50%);
     }
-
-    .nav>li .dropdown-menu a,
-    .nav>li .dropdown-menu a:hover {
+    .nav > li .dropdown-menu a,
+    .nav > li .dropdown-menu a:hover {
         color: #484848;
     }
-
     .nav-invert .site-navigation {
         left: 0;
         right: 0;
     }
-
     .nav-center {
         text-align: center;
     }
-
     .nav-center .navbar-header {
         width: 100%;
     }
-
     .nav-center .navbar-header,
     .nav-center .navbar-brand,
-    .nav-center .nav>li {
+    .nav-center .nav > li {
         float: none;
         display: inline-block;
     }
-
     .nav-center .site-navigation {
         position: relative;
         width: 100%;
         right: 0;
         margin-right: 0px;
         margin-top: 20px;
-
     }
-
     .nav-center.mini-nav .navbar-toggle {
         float: none;
         margin: 10px auto 0;
-
     }
 }
 
-.nav>li>.dropdown a {
-    background: none !important;
+.nav > li > .dropdown a {
+    background: none!important;
     display: block;
     padding: 14px 15px;
 }
@@ -461,7 +431,7 @@ nav .caret {
     border-top-color: transparent;
     border-right-color: transparent;
     border-bottom-color: transparent;
-    margin: 6px -5px 0 0 !important;
+    margin: 6px -5px 0 0!important;
     float: right;
 }
 
@@ -491,7 +461,7 @@ nav .caret {
 }
 
 button {
-    outline: none !important;
+    outline: none!important;
 }
 
 .btn-rd {
@@ -506,11 +476,11 @@ button {
 }
 
 .icon-md {
-    font-size: 30px !important;
+    font-size: 30px!important;
 }
 
 .icon-lg {
-    font-size: 60px !important;
+    font-size: 60px!important;
 }
 
 .sm-shadow {
@@ -681,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757 !important;
+    color: #575757!important;
 }
 
 .container {
@@ -707,7 +677,7 @@ a {
 }
 
 p {
-    font-size: 15px;
+    font-size: 11px;
 }
 
 .tight-width-whitespace {
@@ -722,7 +692,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF !important;
+    color: #FFFFFF!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -730,20 +700,20 @@ p {
 }
 
 .social {
-    max-width: 90%;
+    max-width: 400px;
     margin: auto auto auto auto;
 }
 
 h2 {
-    font-size: 24px;
-    line-height: 1.5em;
+    font-size: 22px;
+    line-height: 1.4em;
 }
 
 h3 {
-    font-size: 19px;
+    font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333 !important;
+    color: #333333!important;
 }
 
 .med-width-whitespace {
@@ -753,11 +723,11 @@ h3 {
 }
 
 h1 {
-    color: #333333 !important;
+    color: #333333!important;
 }
 
 h4 {
-    color: #333333 !important;
+    color: #333333!important;
 }
 
 .icons {
@@ -766,22 +736,16 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF !important;
+    color: #FFFFFF!important;
 }
 
-/* Modif pour ajustements des images portefolio*/
-
 .portfolio-thumb {
-    margin-top: 24px;
     margin-bottom: 24px;
-    width: 100%;
-    height: 20rem;
-    object-fit: cover;
 }
 
 .portfolio-row {
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin-bottom: 44px;
+    margin-top: 50px;
 }
 
 .avatar {
@@ -789,14 +753,13 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(0, 0, 0, 0.829);
+    background-color: rgba(165, 147, 99, 0.7);
     padding: 40px 40px 40px 40px;
-    border-radius: 5px;
 }
 
 .bold-link {
     font-weight: 900;
-    text-decoration: underline !important;
+    text-decoration: underline!important;
 }
 
 .bgc-white {
@@ -812,39 +775,38 @@ h4 {
 }
 
 .tc-white {
-    color: #f2f2f2 !important;
+    color: #F3976C!important;
 }
-
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #000000 !important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956 !important;
-    color: #FFFFFF !important;
+    background: #c27956!important;
+    color: #FFFFFF!important;
 }
 
 .ltc-white {
-    color: #FFFFFF !important;
+    color: #FFFFFF!important;
 }
 
 .ltc-white:hover {
-    color: #cccccc !important;
+    color: #cccccc!important;
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C !important;
+    color: #F3976C!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956 !important;
+    color: #c27956!important;
 }
 
 .icon-dark-slate-blue {
-    color: #364577 !important;
-    border-color: #364577 !important;
+    color: #364577!important;
+    border-color: #364577!important;
 }
 
 .bg-dots-bg {
@@ -857,11 +819,10 @@ h4 {
 
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
-    width: 100%;
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.jpg");
+    background-image: url("img/image-de-presentation.bmp");
 }
 
 @media (max-width: 1024px) {
@@ -869,7 +830,6 @@ h4 {
         padding-left: 20px;
         padding-right: 20px;
     }
-
     .bloc.full-width-bloc,
     .bloc-tile-2.full-width-bloc .container,
     .bloc-tile-3.full-width-bloc .container,
@@ -883,7 +843,6 @@ h4 {
     .navbar .nav {
         max-width: 80%
     }
-
     .nav-center.navbar .nav {
         max-width: 100%
     }
@@ -905,28 +864,23 @@ h4 {
     .container {
         width: 100%;
     }
-
     .b-parallax {
         background-attachment: scroll;
     }
-
     .page-container,
     #hero-bloc {
         overflow-x: hidden;
         position: relative;
     }
-
     .bloc {
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
     }
-
     .bloc-group,
     .bloc-group .bloc {
         display: block;
         width: 100%;
     }
-
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
@@ -940,32 +894,36 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-
-
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p,
+    #disqus_thread {
+        padding-left: 10px!important;
+        padding-right: 10px!important;
+    }
     .b-parallax {
         background-attachment: scroll;
     }
-
     .navbar .nav {
         padding-top: 0;
         border-top: 1px solid rgba(0, 0, 0, .2);
-        float: none !important;
+        float: none!important;
     }
-
     .navbar.row {
         margin-left: 0;
         margin-right: 0;
     }
-
     .site-navigation {
         position: inherit;
         transform: none;
         -webkit-transform: none;
         -ms-transform: none;
-        transition: all 500ms;
     }
-
-    .nav>li {
+    .nav > li {
         margin-top: 0;
         border-bottom: 1px solid rgba(0, 0, 0, .1);
         background: rgba(0, 0, 0, .05);
@@ -973,78 +931,62 @@ h4 {
         padding-left: 15px;
         width: 100%;
     }
-
-    .nav>li:hover {
+    .nav > li:hover {
         background: rgba(0, 0, 0, .08);
     }
-
     .dropdown .dropdown a .caret {
         float: none;
-        margin: 5px 0 0 10px !important;
+        margin: 5px 0 0 10px!important;
         border: 4px solid black;
         border-bottom-color: transparent;
         border-right-color: transparent;
         border-left-color: transparent;
     }
-
     #hero-bloc .navbar .nav {
         background: rgba(0, 0, 0, .8);
     }
-
     #hero-bloc .navbar .nav a {
         color: rgba(255, 255, 255, .6);
     }
-
     .hero {
         padding: 50px 0;
     }
-
     .hero-nav {
         left: -1px;
         right: -1px;
     }
-
     .navbar-collapse {
         padding: 0;
         overflow-x: hidden;
         -webkit-box-shadow: none;
         box-shadow: none;
-
     }
-
     .navbar-brand img {
         max-height: 40px;
         width: auto;
     }
-
     .nav-invert .navbar-header {
         float: none;
         width: 100%;
     }
-
     .nav-invert .navbar-toggle {
         float: left;
         margin-left: 10px;
     }
-
     .bloc {
         padding-left: 0;
         padding-right: 0;
     }
-
     .bloc-xxl,
     .bloc-xl,
     .bloc-lg {
         padding: 40px 0;
     }
-
     .bloc-sm,
     .bloc-md {
         padding-left: 0;
         padding-right: 0;
-        padding-bottom: 20px;
     }
-
     .bloc-tile-2 .container,
     .bloc-tile-3 .container,
     .bloc-tile-4 .container,
@@ -1053,42 +995,33 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
-
     .a-block {
         padding: 0 10px;
     }
-
     .btn-dwn {
         display: none;
     }
-
     .voffset {
         margin-top: 5px;
     }
-
     .voffset-md {
         margin-top: 20px;
     }
-
     .voffset-lg {
         margin-top: 30px;
     }
-
     form {
         padding: 5px;
     }
-
     .close-lightbox {
         display: inline-block;
     }
-
     .blocsapp-device-iphone5 {
         background-size: 216px 425px;
         padding-top: 60px;
         width: 216px;
         height: 425px;
     }
-
     .blocsapp-device-iphone5 img {
         width: 180px;
         height: 320px;
@@ -1105,64 +1038,5 @@ h4 {
 @media (max-width: 767px) {
     .bloc-mob-center-text {
         text-align: center;
-    }
-}
-
-
-/*Ajout supplémentaire de classe*/
-/*Correction lié au SEO*/
-
-.imgDescription {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 85%;
-    margin-right: auto;
-    margin-left: auto;
-    font-weight: 550;
-    padding-bottom: 5px;
-    font-size: 18px;
-}
-
-.iconFooter {
-    margin-top: 15px;
-    margin-bottom: 30px;
-}
-
-.fa {
-    transition: all 400ms;
-    background-color: rgba(255, 255, 255, 0.205);
-    padding: 10px;
-    border-radius: 10px;
-    width: 50px;
-    border: 1px solid black;
-}
-
-.fa:hover {
-    transform: scale(1.3);
-}
-
-.footerPartner {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-
-
-.footerList {
-    padding-left: 0;
-    list-style: none;
-}
-
-.flexColumnCenter {
-    display: flex;
-    justify-content: center;
-
-}
-
-@media (max-width: 768px) {
-    .flexColumnCenter {
-        flex-direction: column;
-        width: 100%;
     }
 }
