--- a/style.css
+++ b/style.css
@@ -779,10 +779,7 @@ h4 {
     object-fit: cover;
 }
 
-.portfolio-row {
-    margin-bottom: 20px;
-    margin-top: 20px;
-}
+
 
 .avatar {
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
@@ -1124,6 +1121,7 @@ h4 {
     font-weight: 550;
     padding-bottom: 5px;
     font-size: 18px;
+    color: #000000d8;
 }
 
 .iconFooter {
