--- a/style.css
+++ b/style.css
@@ -1180,5 +1180,10 @@ h4 {
 .titleFooter {
     font-size: 15px;
     font-weight: 700;
-    margin: 0;
+    margin: 0 0 10px 0;
+}
+
+*:focus {
+    border: 3px dotted rgb(0, 255, 0);
+    border-radius: 10px;
 }
